# squoosh

./: .gitignore  generic-tsconfig.json  missing-types.d.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  webpack.config.js
codecs/mozjpeg_enc/: Makefile  example.html  mozjpeg_enc.d.ts  mozjpeg_enc.js  mozjpeg_enc.wasm
codecs/oxipng/: Cargo.toml  Dockerfile  build.sh  main.js  worker.js
codecs/oxipng/pkg/: oxipng.d.ts  oxipng.js  oxipng_bg.d.ts  oxipng_bg.wasm  package.json
codecs/oxipng/pkg-parallel/: oxipng.d.ts  oxipng.js  oxipng_bg.wasm
codecs/oxipng/src/: lib.rs
lib/: client-bundle-plugin.js  image-worker-plugin.js  resolve-dirs-plugin.js
src/client/: index.tsx  tsconfig.json
src/copy/: _headers
src/image-worker/: emscripten-types.d.ts  index.ts  tsconfig.json  util.ts  yo.ts
src/image-worker/mozjpegEncode/: index.ts  util.ts
src/image-worker/mozjpegEncode/mozjpeg_enc/: mozjpeg_enc.d.ts  mozjpeg_enc.js
src/static-build/components/base/: index.d.ts  index.d.ts.map  index.js  index.tsx
src/worker-main-shared/: mozjpegEncode.ts
src_old/codecs/: decoders.ts  encoders.ts  processor.ts
src_old/codecs/processor-worker/: index.ts
src_old/codecs/webp/: decoder.ts  encoder.ts
src_old/components/Options/: index.tsx
src_old/components/compress/: index.tsx
src_old/lib/: util.ts
src_old/sw/: util.ts
