[package]
name = "oxipng"
version = "0.1.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oxipng = { version = "2.3.0", default-features = false, features = ["parallel"], path = "../../../oxipng" }
wasm-bindgen = "0.2.48"
log = { version = "0.4", features = ["release_max_level_off"] }
rayon = { version = "1.3.0", optional = true }
once_cell = { version = "1.3.1", optional = true }
crossbeam-channel = { version = "0.4.2", optional = true }

[profile.release]
lto = true
opt-level = "s"

[features]
parallel = ["oxipng/parallel", "rayon", "crossbeam-channel", "once_cell"]
